# Nova_RL

./: .env.example  .firebaseignore  .firebaserc  .gitignore  DEPLOYMENT.md  Dockerfile  NovaRL_Final_Roadmap.docx  README.md  TODO.md  app.py  firebase.json  inference.py  inference_fixed.py  nova_ui.html  openenv.yaml  preload_models.py  pyproject.toml  requirements.txt
nova_rl_env/: __init__.py  config.py  datagen.py  environment.py  graders.py  llm.py  memory.py  models.py  rewards.py  tasks.py
server/: __init__.py  app.py
ui/: nova_ui.html
ui/public/: index.html
